# Charlotte

./: .gitignore  CMakeLists.txt  README.md  charlotte.py  kinematics.cpp  kinematics2.cpp
Code/python/: charlotte.py
Code/src/: main.cpp
Code/src/simulation/: CMakeLists.txt  package.xml
Code/src/simulation/config/: robot-config.rviz
Code/src/simulation/launch/: charlotte_gazebo_control.launch
Code/src/simulation/meshes/: Base.stl  Motor1.stl  Motor3.stl
Code/src/simulation/src/: joint_control
Code/src/simulation/urdf/: charlotte.urdf
Code/src/simulation/worlds/: charlotte.world
Structure/: Assembly_Leg.iam  Complete_Assembly.iam  Complete_leg_assembly.iam  Foot.ipt  Leg_part1.ipt  Leg_part2.ipt  Leg_part3.ipt  Middle_base.ipt  Motor.ipt  Motor_assembly.iam  Motor_joint.ipt  SHEET_METAL1.ipt  SHEET_METAL2.ipt  Standoff.ipt  Superior_Base.ipt  Thread.ipt  center_joint.ipt  lipo_1.ipt
Structure/Leg_part3_variations/: Leg_part3_1.ipt  Leg_part3_2.ipt  SHEET_METAL1_joint.ipt
Structure/Leg_part3_variations/OldVersions/: Leg_part3_1.0008.ipt  SHEET_METAL1_joint.0005.ipt
Structure/OldVersions/: Assembly_Leg.0009.iam  Complete_Assembly.0005.iam  Complete_Assembly.0006.iam  Complete_leg_assembly.0004.iam  Complete_leg_assembly.0005.iam  Foot.0003.ipt  Leg_part1.0010.ipt  Leg_part2.0011.ipt  Leg_part3.0010.ipt  Middle_base.0001.ipt  Motor.0003.ipt  Motor_assembly.0004.iam  Motor_joint.0001.ipt  SHEET_METAL1.0003.ipt  SHEET_METAL2.0003.ipt  Standoff.0004.ipt  Superior_Base.0002.ipt  center_joint.0001.ipt  lipo_1.0001.ipt
python/: kinematics.py
src/: main.cpp
src/charpkg/: CMakeLists.txt  package.xml
src/charpkg/src/: back.cpp  main.cpp  main2.cpp  pasos.cpp
src/simulation/config/: charlotte_control.yaml
src/simulation/launch/: charlotte.launch  charlotte_gazebo.launch
src/simulation/meshes/: Base2.stl  Foot.stl  Leg.stl  Motor2.stl  Vara1.stl  Vara2.stl
src/simulation/src/: charly_joy.py  forward_kinematics.cpp  forward_kinematics.py
src/simulation/urdf/: charlotte_gazebo.urdf  recuperar.xml
